Allow app compilation on Java 18+